# circuitbreaker-auction

./: .envrc  .gitignore  README.md  foundry.toml  justfile  package.json  pnpm-lock.yaml  tsconfig.json
circuits/: Nargo.toml
circuits/crates/bid_smt/: Nargo.toml  Prover.toml
circuits/crates/bid_smt/src/: main.nr
circuits/crates/bid_smt_add/: Nargo.toml
circuits/crates/bid_smt_init/: Nargo.toml
circuits/crates/bid_smt_init/contract/bid_smt_init/: plonk_vk.sol
circuits/crates/bid_smt_init/src/: main.nr
circuits/crates/reveal_smt/: Nargo.toml  Prover.toml  Verifier.toml
circuits/crates/reveal_smt/src/: main.nr
components/: component.tsx  connect.tsx
contract/: Auction.sol
pages/: config.ts
sim/: README.md  pyproject.toml  sim.ipynb
sim/src/sim/: __init__.py
src/: index.tsx
