[project]
name = "sim"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Orpheus Lummis", email = "o@orpheuslummis.info" }
]
dependencies = [
    "ipykernel>=6.29.1",
    "matplotlib>=3.7.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "sim:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sim"]
